[metadata]
name = dj-ms-auth-router
version = 1.4.0
description = Simple database router that helps to implement microservices architecture with Django.
long_description = file: README.md
url = https://github.com/dj-ms/dj-ms-auth-router
author = Astafeev Rustam
author_email = astafeev0308@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = ~= 3.10
install_requires =
    Django >= 4.1